--- a/public/login.html
+++ b/public/login.html
@@ -27,11 +27,11 @@
         </div>
         <p id="errorTag" class="text-center text-red-400 mb-1"></p>
         <div class="flex justify-center items-center">
-          <h2 class="px-3 text-white font-bold">Username: </h2>
+          <h2 class="px-3 text-white font-bold">Username  :  </h2>
             <input id="username" type="text" class="text-center flex mt-3 mb-2 p-1 bg-white border shadow-sm placeholder-slate-400 block rounded-lg" placeholder="Username"/>
           </div>
           <div class="flex justify-center items-center">
-            <h2 class="px-2 text-white font-bold">Account Number:</h2>
+            <h2 class="px-2 text-white font-bold">Acc Number:</h2>
             <input id="accountNumber" type="text" class="text-center flex my-3 p-1 bg-white border shadow-sm placeholder-slate-400 block rounded-lg" placeholder="Account Number"/>
           </div>
         <div class="flex justify-center items-center">
