--- a/public/admin.html
+++ b/public/admin.html
@@ -8,68 +8,97 @@
 </head>
 <body class="bg-gray-900 flex flex-col min-h-screen"> 
   <nav class="bg-green-900">
-      <div class="mx-auto max-w-7xl px-2 sm:px-6 lg:px-8">
-        <div class="relative flex h-16 items-center justify-between">
-            <h1 class="flex flex-shrink-0 items-center text-white font-bold ml-3"> EcoCents</h1>
-              <div class="ml-6 flex flex-nowrap">
-                  <a href="home.html" class="rounded px-3 py-2 text-gray-400 hover:bg-green-700 hover:text-white">Account</a>
-                  <a href="payment.html" class="rounded px-3 py-2 text-gray-400 hover:bg-green-700 hover:text-white">Pay</a>
-                  <a href="rewards.html" class="rounded px-3 py-2 text-gray-400 hover:bg-green-700 hover:text-white">Rewards</a>
-                  <a href="admin.html" class="rounded px-3 py-2 bg-black text-white hover:bg-green-700">Admin</a>
-                  <a href="login.html" class="rounded px-3 py-2 text-gray-400 hover:bg-green-700 hover:text-white">Sign Out</a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </nav>
+    <div class="mx-auto max-w-7xl px-2 sm:px-6 lg:px-8">
+      <div class="relative flex items-center justify-between h-16">
+        <h1 class="flex flex-shrink-0 items-center text-white font-bold ml-3">EcoCents</h1>
 
-    <div class="container my-5 mx-auto flex-grow">
-      <div class="mx-5 lg:mx-60">
-        <h1 class="text-3xl font-bold text-white text-center">Administration</h1>
-        
-        <!-- Discount Creation Form -->
-        <div class="border-2 border-x-0 my-4 pb-5 border-green-800">
-            <h2 class="text-xl font-bold pt-4 text-white text-center">Create a Discount</h2>
-            <p id="errorTag" class="text-red-400 text-center mt-1"></p>
-            <div class="grid grid-flow-col gap-1 mt-1">
-                <h2 class="text-l font-bold text-white px-5 mt-3">Company Name:</h2>      
-                <input id="company" type="text" class="flex items-stretch row-start-1 text-center mt-3 p-1 bg-white border shadow-sm placeholder-slate-400 block rounded-lg mr-5" placeholder="Company"/>
-            </div>
-            <div class="grid grid-flow-col gap-1 mt-2">
-                <h2 class="text-l font-bold text-white px-5 mt-3">Level Requirement:</h2>      
-                <input id="levelRequirement" type="number" class="flex items-stretch row-start-1 text-center mt-3 p-1 bg-white border shadow-sm placeholder-slate-400 block rounded-lg mr-5" min="0" max="10" placeholder="Level"/>
-            </div>
-            <div class="grid grid-flow-col gap-1 mt-2">
-                <h2 class="text-l font-bold text-white px-5 mt-3">Discount Code:</h2>      
-                <input id="discountCode" type="text" class="flex items-stretch row-start-1 text-center mt-3 p-1 bg-white border shadow-sm placeholder-slate-400 block rounded-lg mr-5" placeholder="Code"/>
-            </div>
-            <div class="grid grid-flow-col gap-1 mt-2">
-                <h2 class="text-l font-bold text-white px-5 mt-3 mr-6">Description:</h2>      
-                <input id="description" type="text" class="flex items-stretch row-start-1 text-center mt-3 p-1 bg-white border shadow-sm placeholder-slate-400 block rounded-lg mr-5" placeholder="Description"/>
-            </div>
-            <div class="flex justify-center items-center">
-                <button type="button" id="createDiscountButton" class="bg-green-700 text-white font-bold py-2 px-8 mt-4 rounded mx-2">Create Discount</button>
-            </div>
-        </div>
-
-        <!-- Discounts List Section -->
-        <div id="rewardsContainer" class="mt-5 py-4">
-            <h2 class="text-xl font-bold text-white text-center mb-4">Available <span class="text-orange-500">Discounts</span></h2>
-            <!-- Discounts will be dynamically populated here -->
+        <!-- Hamburger Menu Button (always visible) -->
+        <div class="flex items-center">
+          <button id="menuToggle" class="text-white focus:outline-none">
+            <!-- Hamburger Icon -->
+            <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path>
+            </svg>
+          </button>
         </div>
       </div>
+
+      <!-- Mobile Menu (hidden by default, toggled by hamburger) -->
+      <div id="mobileMenu" class="hidden">
+        <a href="home.html" class="block px-3 py-2 text-gray-400 hover:bg-green-700 hover:text-white">Account</a>
+        <a href="payment.html" class="block px-3 py-2 text-gray-400 hover:bg-green-700 hover:text-white">Pay</a>
+        <a href="rewards.html" class="block px-3 py-2 text-gray-400 hover:bg-green-700 hover:text-white">Rewards</a>
+        <a href="admin.html" class="block px-3 py-2 bg-black text-white hover:bg-green-700">Admin</a>
+        <a href="login.html" class="block px-3 py-2 text-gray-400 hover:bg-green-700 hover:text-white">Sign Out</a>
+      </div>
     </div>
+  </nav>  
+
+  <div class="container my-5 mx-auto flex-grow">
+    <div class="mx-5 lg:mx-60">
+      <h1 class="text-3xl font-bold text-white text-center">Administration</h1>
+      
+      <!-- Discount Creation Form -->
+      <div class="border-2 border-x-0 my-4 pb-5 border-green-800">
+          <h2 class="text-xl font-bold pt-4 text-white text-center">Create a Discount</h2>
+          <p id="errorTag" class="text-red-400 text-center mt-1"></p>
+          <div class="grid grid-flow-col gap-1 mt-1">
+              <h2 class="text-l font-bold text-white px-5 mt-3">Company Name:</h2>      
+              <input id="company" type="text" class="flex items-stretch row-start-1 text-center mt-3 p-1 bg-white border shadow-sm placeholder-slate-400 block rounded-lg mr-5" placeholder="Company"/>
+          </div>
+          <div class="grid grid-flow-col gap-1 mt-2">
+              <h2 class="text-l font-bold text-white px-5 mt-3">Level Requirement:</h2>      
+              <input id="levelRequirement" type="number" class="flex items-stretch row-start-1 text-center mt-3 p-1 bg-white border shadow-sm placeholder-slate-400 block rounded-lg mr-5" min="0" max="10" placeholder="Level"/>
+          </div>
+          <div class="grid grid-flow-col gap-1 mt-2">
+              <h2 class="text-l font-bold text-white px-5 mt-3">Discount Code:</h2>      
+              <input id="discountCode" type="text" class="flex items-stretch row-start-1 text-center mt-3 p-1 bg-white border shadow-sm placeholder-slate-400 block rounded-lg mr-5" placeholder="Code"/>
+          </div>
+          <div class="grid grid-flow-col gap-1 mt-2">
+              <h2 class="text-l font-bold text-white px-5 mt-3 mr-6">Description:</h2>      
+              <input id="description" type="text" class="flex items-stretch row-start-1 text-center mt-3 p-1 bg-white border shadow-sm placeholder-slate-400 block rounded-lg mr-5" placeholder="Description"/>
+          </div>
+          <div class="flex justify-center items-center">
+              <button type="button" id="createDiscountButton" class="bg-green-700 text-white font-bold py-2 px-8 mt-4 rounded mx-2">Create Discount</button>
+          </div>
+      </div>
+
+      <!-- Discounts List Section -->
+      <div id="rewardsContainer" class="mt-5 py-4">
+          <h2 class="text-xl font-bold text-white text-center mb-4">Available <span class="text-orange-500">Discounts</span></h2>
+          <!-- Discounts will be dynamically populated here -->
+      </div>
+    </div>
+  </div>
 
   <!-- Footer -->
   <footer class="bg-green-900 mt-auto">
     <div class="mx-auto p-4 text-center items-center justify-between">
       <h1 class="text-gray-400">© 2024 EcoCents</h1>
+      <!-- Light Mode Toggle Button Moved to Footer -->
+      <button id="themeToggle" class="mt-4 px-3 py-2 bg-gray-700 text-white rounded hover:bg-gray-600">
+        Toggle Light Mode
+      </button>
     </div>
   </footer>
+
 
   <!-- Script to handle fetching and creating discounts -->
   <script src="scripts/admin.js"></script>
   <!-- Script to handle checking admin privileges -->
   <script src="scripts/checkAdminPrivileges.js"></script>
+  <!-- Script to handle checking dark mode, light mode button -->
+  <script src="scripts/darkLightButton.js"></script>
+  <!-- Script to handle menu toggling -->
+  <script>
+    document.addEventListener('DOMContentLoaded', () => {
+      const menuToggle = document.getElementById('menuToggle');
+      const mobileMenu = document.getElementById('mobileMenu');
+  
+      menuToggle.addEventListener('click', () => {
+        mobileMenu.classList.toggle('hidden');
+      });
+    });
+  </script>
 </body>
 </html>
