--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -7,7 +7,7 @@
     <link href="styles.css" rel="stylesheet">
     <script>
         // Redirect to login.html instantly
-        window.location.href = "login.html";
+        // window.location.href = "login.html";
     </script>
 </head>
 <body class="bg-gray-100">
